Enhance OpenAPI import to generate Authorization headers from security schemes
Co-authored-by: Junie <junie@jetbrains.com>